<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="8dp">

    <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:maxLines="100"
            android:layout_weight="1"
            android:drawSelectorOnTop="false"
            />

    <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:text="@string/no_items"
            />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|right"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:onClick="taxInputClick"
                    android:text="@string/tax"
                    android:textSize="25sp"/>

            <TextView
                    android:id="@+id/taxInput"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:onClick="taxInputClick"
                    android:clickable="true"
                    android:gravity="right"
                    android:text="@string/zero"
                    android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tipText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/tip"
                    android:textSize="25sp"/>

            <TextView
                    android:id="@+id/tipInput"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="@string/zero"
                    android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/total"
                    android:textSize="30sp"/>

            <TextView
                    android:id="@+id/TotalDueText"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="@string/zero"
                    android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/addPerson"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@android:drawable/ic_menu_add"
                    android:onClick="addPersonClick"
                    android:text="@string/add_p"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>