<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp"
              android:orientation="vertical">
    <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/namePersonET"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name"/>

        <EditText
                android:id="@+id/valuePersonET"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/t_spent"
                android:inputType="numberDecimal"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical"
            />

    <Button
            style="?android:attr/buttonBarButtonStyle"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/addPersonOKBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="addPersonOKClick"
            android:text="@string/ok"
            />


</LinearLayout>